# claude-certificate-exercises

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: mcp-server-tasks.md
.claude/skills/new-exercise/: SKILL.md
.claude/skills/new-task/: SKILL.md
.claude/skills/ship-exercise/: SKILL.md
.claude/skills/ship-task/: SKILL.md
common/: __init__.py  agent_loop.py  bootstrap.py  client.py  errors.py  logging_utils.py  mcp_logging.py  session_store.py  subagent.py
exercises/agentic-architecture/task-1-multi-tool-agent-escalation/: README.md  data.py  main.py  tools.py
exercises/agentic-architecture/task-2-coordinator-subagent-orchestration/: README.md  data.py  main.py  tools.py
exercises/agentic-architecture/task-3-subagent-invocation-context-passing/: README.md  data.py  main.py  tools.py
exercises/agentic-architecture/task-4-it-access-helpdesk/: README.md  data.py  main.py  policy.py  tools.py
exercises/agentic-architecture/task-5-multi-carrier-shipment-tracking/: README.md  data.py  main.py  normalize.py  tools.py
tasks/agentic-architecture/task-1-multi-tool-agent-escalation/: README.md  data.py  main.py  policy.py  tools.py
wiki/: exercises.md
wiki/exercises/: README.md  agentic-architecture.md  claude-code-workflows.md  context-management.md  preparation-exercises.md  prompt-engineering.md  tool-design-mcp.md
wiki/tasks/: 1-agentic-architecture.md  3-claude-code-workflows.md  5-context-management.md  6-preparation-tasks.md  README.md  preparation-tasks.md  prompt-engineering.md  tool-design-mcp.md
(+82 files in other folders)
